--- a/registry.system/style.css
+++ b/registry.system/style.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
-
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -165,15 +167,15 @@ nav li > a:hover{
     background-image: url(/registry.system/images/ict-pic.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 59vmin 46vmin;
-    height: 46vmin;
-    width: 59vmin;
+    background-size: cover;
+    height: 300px;
+    width: 500px;
     position: relative;
-    border: 26px double #ffb915;
+    border: 15px double #ffb915;
     border-radius: 10%;
     margin: auto;
     opacity: 0.8;
-    box-shadow: 0 0 3em rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 3em rgba(0, 0, 0, 0.6));
 
 }
 .text-wrapper-abt{
@@ -229,9 +231,23 @@ nav li > a:hover{
     position: absolute;
     bottom: 80px;
     right: 115px;
-
 } 
-.links a{
+.links2{
+    position: absolute;
+    bottom: 80px;
+    right: 110px;
+}
+.links3{
+    position: absolute;
+    bottom: 80px;
+    right: 98px;
+}
+.links5{
+    position: absolute;
+    bottom: 80px;
+    right: 81px;
+}
+.links a, .links2 a, .links3 a, .links5 a{
     font-size: .8rem;
     color: #efefef;
     text-decoration: none;
@@ -240,19 +256,62 @@ nav li > a:hover{
 }
 .links a::after{
     content: "";
-    width: 212px;
+    width: 205px;
     height: 1.5px;
     background-color: #ffb915;
     position: absolute;
     top: -5px;
-    left: -98px;
+    left: -90px;
     transform: scaleX(0);
     transition: transform 500ms ease;
 }
-.links a:hover{
+.links2 a::after{
+    content: "";
+    width: 205px;
+    height: 1.5px;
+    background-color: #ffb915;
+    position: absolute;
+    top: -5px;
+    left: -78px;
+    transform: scaleX(0);
+    transition: transform 500ms ease;
+}
+.links3 a::after{
+    content: "";
+    width: 205px;
+    height: 1.5px;
+    background-color: #ffb915;
+    position: absolute;
+    top: -5px;
+    left: -73px;
+    transform: scaleX(0);
+    transition: transform 500ms ease;
+}
+.links5 a::after{
+    content: "";
+    width: 205px;
+    height: 1.5px;
+    background-color: #ffb915;
+    position: absolute;
+    top: -5px;
+    left: -56px;
+    transform: scaleX(0);
+    transition: transform 500ms ease;
+}
+
+.links a:hover, .links2 a:hover, .links3 a:hover, .links5 a:hover{
     color: #ffb915;
 }
 .card:hover .links a::after{
+    transform: scale(1);
+}
+.card:hover .links2 a::after{
+    transform: scale(1);
+}
+.card:hover .links3 a::after{
+    transform: scale(1);
+}
+.card:hover .links5 a::after{
     transform: scale(1);
 }
 
