slight changes, kinda nothing new naman

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -104,7 +104,6 @@ a.desc:after {
 .container{
     margin: 0;
 }
-ol, ul, dl {
-    margin-top: 0;
-    margin-bottom: 0rem;
+footer{
+    display:none;
 }
