justification of index.php and removal of excess header

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -101,9 +101,9 @@ a.desc:after {
 {
     text-decoration: none;
 }
-.container{
-    margin: 0;
-}
 footer{
     display:none;
+}
+.container{
+    margin: 0 auto !important;
 }
