--- a/registry.system/style.css
+++ b/registry.system/style.css
@@ -152,7 +152,7 @@ nav li > a:hover {
 #hero {
   padding: 15em 10em;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(/registry.system/images/hero-background.jpg);
+    url(images/hero-background.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -196,43 +196,43 @@ nav li > a:hover {
 }
 @keyframes backgroundSlideshow {
   0% {
-    background-image: url("/registry.system/images/img1.jpg");
+    background-image: url("images/img1.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   25% {
-    background-image: url("/registry.system/images/img2.jpg");
+    background-image: url("images/img2.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   50% {
-    background-image: url("/registry.system/images/img3.jpg");
+    background-image: url("images/img3.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   75% {
-    background-image: url("/registry.system/images/img4.jpg");
+    background-image: url("images/img4.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   100% {
-    background-image: url("/registry.system/images/img5.jpg");
+    background-image: url("images/img5.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   125% {
-    background-image: url("/registry.system/images/img6.jpg");
+    background-image: url("images/img6.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
   150% {
-    background-image: url("/registry.system/images/img7.jpg");
+    background-image: url("images/img7.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -285,7 +285,7 @@ nav li > a:hover {
   font-family: "manrope", sans-serif;
 }
 .image-wrapper-abt {
-  background-image: url(/registry.system/images/ict-pic.jpg);
+  background-image: url(images/ict-pic.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -335,7 +335,7 @@ nav li > a:hover {
 /* PEOPLE CSS AND RESPONSIVE*/
 
 #people {
-  background-image: url(/registry.system/images/background-abt.png);
+  background-image: url(images/background-abt.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
